update qgis server version

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - qgisnet
 
   qgisserver:
-    image: openquake/qgis-server:3.16
+    image: opengisch/qgis-server:stable
     restart: unless-stopped
     environment:
       # Do not run the embedded copy of nginx
