--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,7 @@ services:
       - 443:443
     volumes:
       - ./conf/Caddyfile:/etc/caddy/Caddyfile
+      - ./www:/io/www:ro
     depends_on:
       - qgisserver
     environment:
