--- a/docker-compose-swarm.yml
+++ b/docker-compose-swarm.yml
@@ -34,7 +34,7 @@ services:
       QGIS_SERVER_LANDING_PAGE_PROJECTS_DIRECTORIES: /io/data
       QGIS_PLUGINPATH: /io/plugins
     volumes:
-      - ./data/projects:/io/data
+      - ./data/projects:/io/data:ro
       - ./data/plugins:/io/plugins:ro
       #- ./data/fonts:/usr/local/share/fonts:ro
       #- ./data/projects/svg:/var/lib/qgis/.local/share/QGIS/QGIS3/profiles/default/svg:ro
